--- a/Class 4 House Rent.ipynb
+++ b/Class 4 House Rent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "eae05f81-536e-4ad8-af56-c778f138868f",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "94b28222-aff0-4aee-a590-df217dbd9997",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "be0da327-62d2-4fba-92a9-68e503e7520e",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "4  3000  52100"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1360a24b-d455-452a-8c1c-51d4b2e68125",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "(60, 2)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3aab7800-06b4-42cb-a2a3-24770e16c74e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x21a1b1f1dc0>"
+       "<matplotlib.collections.PathCollection at 0x22441dd97c0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c3418ac1-9e32-453f-983d-f87f4f8b733a",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7eaeefcc-ea52-4f6f-ade4-e77d3bea9f4d",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "Name: area, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b694c278-0442-48b6-807b-6c3d393dd48c",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "Name: rent, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "8de9e9cc-2436-4aef-a0a2-2bed72c4e23f",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "Text(0.5, 1.0, 'area-rent visualization')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "4093cfeb-8d9c-4240-bda4-95a00be4957e",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "2289.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "a0cc0173-a464-4df1-b31c-37feebfca918",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "37269.166666666664"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3bbf1eee-d83d-4a6f-bf78-1bb343700ab2",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "116ebda9-5708-40b3-aef3-305a49fb53d4",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "2289.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "f70696d4-025d-4582-96a8-9603a4327c2f",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
        "37269.166666666664"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,50 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "115e2be4-567b-4116-a6d3-db7229f73131",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtrain\u001b[49m\u001b[38;5;241m.\u001b[39mshape\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17442d69-6ef7-449f-9b93-afa71cb7d552",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(15, 2)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "5ffd2d3c-13dc-4b11-a969-666efb138fc8",
    "metadata": {},
    "outputs": [],
@@ -404,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "36e1e543-a319-44f1-ac5d-04a35ef1b625",
    "metadata": {},
    "outputs": [],
@@ -415,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "086a2ebc-8019-4c07-b0e0-f77d19e9d158",
    "metadata": {},
    "outputs": [
@@ -477,7 +434,7 @@
        "4  3000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "6d9cabad-2270-4649-b797-327e40c45c49",
    "metadata": {},
    "outputs": [
@@ -550,7 +507,7 @@
        "4  52100"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "f84499f0-f1b1-4955-bf10-c2e93e7d14bd",
    "metadata": {},
    "outputs": [],
@@ -571,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "33cbb504-6941-4c65-a34a-ffd148108c3e",
    "metadata": {},
    "outputs": [
@@ -633,7 +590,7 @@
        "19  2700"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "c0c98d88-35fe-4961-a59d-7ae274fa124d",
    "metadata": {},
    "outputs": [
@@ -706,7 +663,7 @@
        "19  47000"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "3a60558c-2499-4ac5-a23f-7ded5c30df82",
    "metadata": {},
    "outputs": [
@@ -779,7 +736,7 @@
        "50  2110"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "57f74b6e-fcb6-4b69-ab77-9185572cf4ba",
    "metadata": {},
    "outputs": [
@@ -852,7 +809,7 @@
        "50  31000"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "a56562ec-c86e-4364-9d0c-d8bfca215d85",
    "metadata": {},
    "outputs": [
@@ -873,7 +830,7 @@
        "(15, 1)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "abcf83b3-ffb9-4003-98d0-65a8fc6861de",
    "metadata": {},
    "outputs": [
@@ -894,7 +851,7 @@
        "(45, 1)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "22df8c8b-ad0c-4b37-af43-cecd21e53906",
    "metadata": {},
    "outputs": [],
@@ -924,17 +881,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "350e6582-4e45-4ac3-8bbd-2a17e2212e28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr=LinearRegression()"
+    "lr=LinearRegression() #object created lr<"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "de20baf1-9802-409f-9fca-2cf4e6e3a903",
    "metadata": {},
    "outputs": [
@@ -1351,18 +1308,18 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr.fit(xtrain,ytrain)"
+    "lr.fit(xtrain,ytrain) #training model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "daa56232-ee1f-49eb-aa76-b367deef909c",
    "metadata": {},
    "outputs": [
@@ -1372,19 +1329,19 @@
        "array([[21.68780639]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m=lr.coef_\n",
+    "m=lr.coef_ #coefficeint\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "b02d6f2a-f2f8-49eb-b0c7-95e510c145cd",
    "metadata": {},
    "outputs": [
@@ -1394,19 +1351,19 @@
        "array([-12460.41329719])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c=lr.intercept_\n",
+    "c=lr.intercept_ \n",
     "c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "12e4ec2c-489f-4a71-9e46-b45a21e1da40",
    "metadata": {},
    "outputs": [
@@ -1416,7 +1373,7 @@
        "array([[26577.63819999]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "24324a2a-790f-4798-93d7-ed9c790c805b",
    "metadata": {},
    "outputs": [
@@ -1438,7 +1395,7 @@
        "array([[36337.15107429]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "e88430f6-f227-4507-926f-1d72fbbccb78",
    "metadata": {},
    "outputs": [
@@ -1460,7 +1417,7 @@
        "array([[35252.76075492]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1471,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "7e7d8306-6e59-4f19-b48a-62069a4d1909",
    "metadata": {},
    "outputs": [],
@@ -1481,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "4c41f099-c0c2-4333-9c6f-7ace60b1e576",
    "metadata": {},
    "outputs": [
@@ -1555,7 +1512,7 @@
        "4  3000  52100    52603.005865"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,17 +1523,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "id": "717b7c45-6f5d-4dcc-b377-0f21ba1d9ddb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x13b07459340>"
+       "<matplotlib.collections.PathCollection at 0x224447f9b80>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1599,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "fb805374-2c73-4e64-bc01-6c410f42d04f",
    "metadata": {},
    "outputs": [],
@@ -1609,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "295fb47f-d90d-4f8e-9ac7-4bb9f82c8267",
    "metadata": {},
    "outputs": [],
@@ -1620,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "96e04669-085f-4e93-9e18-08d577f48eb8",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1587,7 @@
        "5816210.138113206"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "d267c6bb-cd31-48c1-b00e-035888686f13",
    "metadata": {},
    "outputs": [
@@ -1651,7 +1608,7 @@
        "1828.0513339512015"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "e9ee09a9-6847-42ad-9f79-08459d4c7a2b",
    "metadata": {},
    "outputs": [
@@ -1672,7 +1629,7 @@
        "0.9022409645314653"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,17 +1640,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 43,
    "id": "143196d3-ba1f-4aa4-b8f9-29065523e5ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x13b06e28500>"
+       "<matplotlib.collections.PathCollection at 0x22444863650>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1716,8 +1673,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "3826e464-69f0-4540-843f-dec947f77289",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[30915.19947746]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr.predict([[2000]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3f3a3c1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[95978.61863942]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr.predict([[5000]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47e47355",
+   "metadata": {},
+   "source": [
+    "Save AI Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f382d46f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8bb5fa6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(lr,open('my_lr1','wb')) #wb=write binary ,as we going to save it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9fdbcb60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['my_lr2']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib as jb\n",
+    "jb.dump(lr,'my_lr2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af015190",
    "metadata": {},
    "outputs": [],
    "source": []
